@@ -5,6 +5,9 @@ Please make entries to this log (in addition to the CVS log) that describe
 major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
+02/08/01 mpeterson@caldera.com
+UA requests may only be serviced by DAs if a known DA is found that supports
+ALL the scopes in the request scope list.
 
 02/08/01 mpeterson@caldera.com
 Added code to make sure that DAAdvert bootstamps are never the same in 
